--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,3 +44,14 @@ code {
 .full-height{
   height: 100vh;
 }
+
+@media all and (min-width: 480px) {
+  .Login {
+    padding: 60px 0;
+  }
+
+  .Login form {
+    margin: 0 auto;
+    max-width: 320px;
+  }
+}
